adding most recent changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,25 +5,61 @@
 
   <meta charset="UTF-8">
   <title>Andrew Jasinski</title>
+
+  <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/headerstyle.css">
+  <link rel="stylesheet" href="assets/css/footerstyle.css">
+  <link rel="stylesheet" href="assets/css/imagestyle.css">
+
 
 </head>
 
-<ul>
-
-    <li>Andrew Jasinski</li>
-    <li><a href="index.html">About</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="contact.html">Contact</a></li>
-</ul>
 
 <body>
   
-    <header>
+        <header>
+                <h1 id="name">Andrew Jasinski</h1>
+                    <ul>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="index.html">About</a></li>
+                    </ul>        
+            </header>
 
-    </header>
+    <div class="box-set">
+    <h2>Portfolio</h2>
 
+    <hr>
+    
+    <div class="gallery">
+        <img src="assets/images/murray1.jpg">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/murray2.jpg">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/murray3.jpg">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/murray4.jpg">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/murray5.jpg">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/murray6.jpg">
+    </div>
+
+    </div>
+    
+
+    <footer>copyright@</footer>
 
 </body>
 
