not quite finished project

--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
 
 </head>
 
-<body>
+<body class="background">
     
-    <header>
+    <header id="links">
             <h1 id="name">Andrew Jasinski</h1>
             <ul>
                 <li><a href="contact.html">Contact</a></li>
@@ -27,18 +27,17 @@
     <div class="box-set">
     
     <h2>Contact</h2>
-    <hr>
     <form id="contact">
         Name: <br>
-        <input type="text" name="Name" style="width:765px">
+        <input type="text" name="Name" style="width:100%">
         <br><br>
         Email: <br>
-        <input type="text" name="Email" style="width:765px">
+        <input type="text" name="Email" style="width:100%">
         <br><br>
         Message: <br>
-        <input type="text" name="Message" style="height:170px; width:765px">
+        <input type="text" name="Message" style="height:170px; width:100%">
         <br><br>
-        <button type=:"button" style="color:#ffffff; background-color:#4aaaa5; height:30px; width:100px">Submit</button>
+        <button type="button" style="color:#ffffff; background-color:#4aaaa5; height:30px; width:100px">Submit</button>
     </form>
 
     </div>
@@ -46,5 +45,7 @@
     <footer>copyright@</footer>
 
 </body>
+
+
 
 </html>
