--- a/portfolio.html
+++ b/portfolio.html
@@ -6,17 +6,18 @@
   <meta charset="UTF-8">
   <title>Andrew Jasinski</title>
 
-  <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
-  <link rel="stylesheet" href="assets/css/style.css">
+
+  <!--<link rel="stylesheet" href="assets/css/style.css">-->
   <link rel="stylesheet" href="assets/css/headerstyle.css">
   <link rel="stylesheet" href="assets/css/footerstyle.css">
   <link rel="stylesheet" href="assets/css/imagestyle.css">
+  <link rel="stylesheet" href="assets/css/reset.css">
 
 
 </head>
 
 
-<body>
+<body class="background">
   
         <header>
                 <h1 id="name">Andrew Jasinski</h1>
@@ -25,39 +26,56 @@
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="index.html">About</a></li>
                     </ul>        
-            </header>
+        </header>
 
     <div class="box-set">
     <h2>Portfolio</h2>
 
     <hr>
+
+    <div class="gallery">
+        <img src="assets/images/murray1.jpg" alt="project1">
+        <div class="text-block">
+            <h4>project1</h4>
+        </div>
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/murray2.jpg" alt="project2">
+        <div class="text-block">
+            <h4>project2</h4>
+        </div>
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/murray3.jpg" alt="project3">
+        <div class="text-block">
+                <h4>project3</h4>
+        </div>
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/murray4.jpg" alt="project4">
+        <div class="text-block">
+            <h4>project4</h4>
+        </div>
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/murray5.jpg" alt="project5">
+        <div class="text-block">
+            <h4>project5</h4>
+        </div>
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/murray6.jpg" alt="project6">
+        <div class="text-block">
+            <h4>project6</h4>
+        </div>
+    </div>
     
-    <div class="gallery">
-        <img src="assets/images/murray1.jpg">
     </div>
-
-    <div class="gallery">
-        <img src="assets/images/murray2.jpg">
-    </div>
-
-    <div class="gallery">
-        <img src="assets/images/murray3.jpg">
-    </div>
-
-    <div class="gallery">
-        <img src="assets/images/murray4.jpg">
-    </div>
-
-    <div class="gallery">
-        <img src="assets/images/murray5.jpg">
-    </div>
-
-    <div class="gallery">
-        <img src="assets/images/murray6.jpg">
-    </div>
-
-    </div>
-    
 
     <footer>copyright@</footer>
 
