--- a/portfolio.html
+++ b/portfolio.html
@@ -6,12 +6,12 @@
   <meta charset="UTF-8">
   <title>Andrew Jasinski</title>
 
-
-  <!--<link rel="stylesheet" href="assets/css/style.css">-->
+  <!--<link rel="stylesheet" href="assets/css/reset.css">-->
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/headerstyle.css">
   <link rel="stylesheet" href="assets/css/footerstyle.css">
   <link rel="stylesheet" href="assets/css/imagestyle.css">
-  <link rel="stylesheet" href="assets/css/reset.css">
+
 
 
 </head>
@@ -75,7 +75,7 @@
         </div>
     </div>
     
-    </div>
+</div>
 
     <footer>copyright@</footer>
 
