--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <hr>
 
-    <p class="space"><img src="assets/images/prof-pic.png" alt="Andrew Jasinski Photo"/> My name is Andrew Jasinski.  I am currently living in San Francisco and currently working in retail banking.  I moved to San Francisco about 3 years ago from Buffalo, NY and am very happy with the decision to move out west (the winters are just a bit calmer). </p>
+    <p class="space"><img src="images/prof-pic.png" alt="Andrew Jasinski Photo"/> My name is Andrew Jasinski.  I am currently living in San Francisco and currently working in retail banking.  I moved to San Francisco about 3 years ago from Buffalo, NY and am very happy with the decision to move out west (the winters are just a bit calmer). </p>
     <p class="space">In my spare time I enjoy hiking, snowboarding, and just being outdoors in general.  When I moved out here in 2015, my girlfriend and I planned the road trip based around stopping at various National Parks along the way. We went to as many as we could in 10 days before we had to get back to the adult world of work.</p>
     <p class="space">After spending a few years in banking I decided to make a big change in my life and work towards a new career. At this point I am in the very early stages of becoming a full stack developer but am highly motivated and excited to learn!</p>
     
